# esp32-puf-iot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig
aws/: .env  ca_cred.json  csr.cert  package-lock.json  package.json  trigger.sh
aws/src/: config.mjs  csr.mjs  index.js
certs/: client.crt  prod.crt
components/esp32_puf_sec/: CMakeLists.txt  README.md  bit_array.c  bit_array.h  ecc.c  ecc.h  nvs.c  nvs.h  puf_measurement.c  puf_measurement.h  wake_up_stub.c  wake_up_stub.h
components/esp32_puflib/: LICENSE  README.md  bit_array.c  bit_array.h  ecc.c  ecc.h  nvs.c  nvs.h  puf_measurement.c  puf_measurement.h  wake_up_stub.c  wake_up_stub.h
main/: CMakeLists.txt  Kconfig.projbuild  define.h  main.c
main/console/: console.c  console.h
main/core/: core.c
main/lib/cJSON/: cJSON.cmake
main/net/: wifi.c  wifi.h
main/src/: define.h  main.c
main/src/console/: console.c  console.h
main/src/core/: core.c  core.h  error.h  nvs.c  nvs.h
main/src/crypto/: crypto.c  crypto.h
main/src/net/: http_client.c  http_client.h  mqtt.c  mqtt.h  tls_transport.c  tls_transport.h  wifi.c
scripts/: device_cert.pem  gen_jitp_template.js  gen_rootca_keys.sh  jitp_template.json  rootca_cert.pem  rootca_cert.srl  rootca_key.key  rootca_openssl.conf  sign_device_csr.sh
scripts/device/: device_cert.pem  device_csr.pem  device_key.pem
server/: .env.example  .eslintignore  .eslintrc.yaml  .gitignore  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json
server/src/: config.ts  export.ts  index.ts  log.ts  puf.ts
(+5 files in other folders)
